--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ out/
 test/differential/scripts/differential.js
 test/differential/scripts/node_modules
 test/differential/scripts/package-lock.json
+.idea
